# OtusSFINAE

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  anotherWay.txt
print_ip/: CMakeLists.txt
print_ip/inc/: helper_string.hpp  print_ip.hpp  print_tuple.hpp  traits.hpp
print_ip/src/: main.cpp
test/: CMakeLists.txt  print_ip_test.cpp
